Fixes truncated select2 placeholder in Ajax mode

--- a/src/Presentation/SmartStore.Web/Content/skinning/_select2.scss
+++ b/src/Presentation/SmartStore.Web/Content/skinning/_select2.scss
@@ -449,6 +449,7 @@ $s2bs-form-control-transition: none; // border-color ease-in-out .15s, box-shado
                 height: calc(#{$s2bs-input-height-base} - #{$border-width * 2});
                 line-height: $s2bs-line-height-base;
                 margin-top: 0;
+                width: 100% !important;
                 min-width: 5em;
             }
         }
